--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -5,5 +5,26 @@
     padding: 10px;
     margin-bottom: 10px;
     border: solid 1px #888;
-    background-color: #DDD8C4;
+    background-color: #967e1e;
   }
+
+h1 {
+  color: orange;
+  font-size: 150%;
+}
+
+p{
+  font-family: "Verdana";
+  text-indent: 20px;
+  margin-left: 10px;
+}
+
+#content {
+  background-color: antiquewhite;
+  width: 500px;
+  min-height: 300px;
+  padding: 20px;
+  margin: 10px;
+  border: dotted 5px #854545;
+  font-size: 20px;
+}
