--- a/lab7/css/lab.css
+++ b/lab7/css/lab.css
@@ -10,7 +10,23 @@
 }
  
 
-.image{
-  float: right;
-  margin-right: 0%;
+.image {
+  position: relative;
+  float:right;
+  display: inline-block;
+}
+
+.image img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+.overlay-text {
+  position: absolute;
+  top: 50%; 
+  left: 50%; 
+  transform: translate(-50%, -30%); 
+  padding: 10px 20px; 
+  font-size: 20px; 
+  text-align: center;
 }
